Closed
Bug 259076
Opened 21 years ago
Closed 21 years ago
proxy mode setting in gnome-network-preferences is not treated well by Mozilla
Categories
(Core :: Preferences: Backend, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: rganesan, Unassigned)
Details
Attachments
(1 file)
|
3.05 KB,
patch
|
darin.moz
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.3) Gecko/20040831 Firefox/0.9.1+
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.3) Gecko/20040831 Firefox/0.9.1+
When we change the proxy mode setting like direct connection,proxy or auto-proxy
in gnome-network-preferences, it doesn't gets changed in the the Firefox
preference setting. Whereas other setting like proxy etc works fine. This is in
continuation to bug #202388.
Reproducible: Always
Steps to Reproduce:
1.Open gnome-network-preferences and set the proxy mode to direct connection
2.Open Mozilla proxy setting to look for change
3.
Actual Results:
Mozilla proxy setting doen't change when the gnome-network-preferences proxy
setting is changed
Expected Results:
Mozilla preferences should also reflect the setting as gnome-network-preferences.
I tried adding "network.proxy.mode", "/system/proxy/mode" to gconf_pref_list.inc
file and changed the nsSystemPref.cpp by adding network.proxy.mode to
sSysPrefList array. It did not work.
Comment 2•21 years ago
|
||
You have set config.use_system_prefs to true, right?
Comment 4•21 years ago
|
||
(this is a patch against aviary)
Comment 5•21 years ago
|
||
Comment on attachment 160322 [details] [diff] [review]
patch to extend gconf proxy settings
Benjamin, could you please have a look at it?
Attachment #160322 -
Flags: review?(bsmedberg)
Comment 6•21 years ago
|
||
Comment on attachment 160322 [details] [diff] [review]
patch to extend gconf proxy settings
Bumping this to somebody who might actually review it.
Attachment #160322 -
Flags: review?(bsmedberg) → review?(darin)
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 7•21 years ago
|
||
Comment on attachment 160322 [details] [diff] [review]
patch to extend gconf proxy settings
sure, this seems reasonable to me.
r=darin
Attachment #160322 -
Flags: review?(darin) → review+
Updated•21 years ago
|
Attachment #160322 -
Flags: superreview?(blizzard)
Attachment #160322 -
Flags: superreview?(blizzard) → superreview+
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•