Bug 259076. Use gconf system prefs for proxy-type and other proxy settings. r=darin,sr=roc, patch by Ganesh (Novell)